Fixed footer needs to overlap other elements

--- a/css/style.css
+++ b/css/style.css
@@ -627,6 +627,7 @@ footer {
   position: fixed;
   clear: both;
   bottom: 0;
+  z-index:99;
 }
 
 #footer-text-first {
